--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "create-react-app": "^5.0.1",
+    "react-hook-form": "^7.40.0",
     "react-router-dom": "^5.3.4"
   }
 }
