--- a/frontend/myapp/package.json
+++ b/frontend/myapp/package.json
@@ -10,7 +10,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-scripts": "5.0.1",
+    "watch": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
