--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "create-react-app": "^5.0.1",
     "react-bootstrap": "^2.7.0",
     "react-hook-form": "^7.40.0",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "watch": "^1.0.2"
   }
 }
